@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-05T02:05:56Z",
+  "timestamp" : "2025-12-09T02:05:44Z",
   "count_outdated" : 272,
   "uniques_outdated" : 205,
-  "count" : 273,
-  "uniques" : 206,
+  "count" : 275,
+  "uniques" : 208,
   "clones" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
